# EmailSecretSanta

./: .gitignore  README.md  pyproject.toml
emailsecretsanta/: secret_santa.py
tests/: test_emailsecretsanta.py
