[tool.poetry]
name = "EmailSecretSanta"
version = "0.1.0"
description = ""
authors = ["Chun Zheng <zhengc42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
emails = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
